# crn_overlay-

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  LICENSE  Makefile  README.md  college_gpu_run.md  main.py  noma_gen.py  pyproject.toml  requirements.txt  visualize.py
.github/: PULL_REQUEST_TEMPLATE.md
agents/: README.md  benchmark.py  buffers.py  cent_noma_td3.py  cent_noma_td3_networks.py  evaluate.py  ma_buffers.py  ma_replay_buffer.py  matd3.py  matd3_networks.py  models.py  overlay_td3.py  td3.py  train_ddqn.py  train_dqn.py  train_ppo.py  train_td3.py  underlay_td3.py
baselines/: README.md  fixed_power.py  greedy.py  random_policy.py
cli/: __init__.py  legacy_plotter.py  logger.py  parser.py  report_generator.py  runner.py  test_runner.py
configs/: README.md  config.yaml  experiment.yaml
docs/: MATD3_ARCHITECTURE.md  README.md  SYSTEM_MODEL.md  algorithm_comparison.md  architecture.md  benchmarking.md  coding_guidelines.md  contributing.md  development_roadmap.md  gymnasium_design.md  repository_structure.md  research_notes.md  system_integration.md
envs/: README.md  __init__.py  crn_env.py  flat_noma_env.py  multi_agent_crn_env.py
experiments/: README.md  __init__.py  pipeline.py
notebooks/: README.md  crn_overlay_kaggle.ipynb  gpu_training.ipynb  overlay_crn.ipynb
plots/: README.md
scratch/: smoke_test.py
simulator/: README.md  __init__.py  base_model.py  ber_waveform.py  channels.py  interference.py  metrics.py  noma_overlay_model.py  overlay_model.py  propagation.py  relay.py  utils.py
tests/: README.md  conftest.py  test_agent.py  (+10 more)
(+43 files in other folders)
